crates/keron-lang/tests/corpus/errors/check/match_pattern_shadows_param.keron
fn pick(x: Int): Int {
  match 99 {
    x => x + 1,
  }
}
